--- a/style.css
+++ b/style.css
@@ -103,7 +103,19 @@ button:active {
     margin: auto 10px;
   }
 
-  .quote-text {
+  .fa-quote-left {
     font-size: 1.5rem;
+  }
+
+  .quote-author {
+    font-size: 1.2rem;
+  }
+
+  .quote-text {
+    font-size: 1rem;
+  }
+
+  .long-quote {
+    font-size: .8rem;
   }
 }
